--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <meta
       name="keywords"
-      content="Jorgelina Parkinson, Artista Plástica, Canvas, oil, artcollector, contemporary art collectors, academic artworks, arte, realismo, óleo, portrait, faces, rostro, charcoal, black and white, carbonilla, pastel, claro oscuro, tonal, retrato, figurative art, oil on canvas, drawing, pintura, paint, painting, colours, Galleries, galerías de arte, Paraná, entre Ríos, argentina, artistas de parana, Artist, naturaleza muerta, still life"
+      content="Jorgelina Parkinson, Artista Plástica, Canvas, oil, artcollector, contemporary art collectors, academic artworks, arte, realismo, óleo, portrait, faces, rostro, charcoal, black and white, carbonilla, pastel, claro oscuro, tonal, retrato, figurative art, oil on canvas, drawing, pintura, paint, painting, colours, Galleries, galerías de arte, Paraná, entre Ríos, argentina, artistas de parana, Artist, naturaleza muerta, still life, arte en parana, galerias parana, artistas parana, artistas plasticos en parana, galerias en parana, galerias en entre rios, artistas entre rios, artistas mujeres argentinas, artistas mujeres entrerrianas, artistas entrerrianos, jorgelina parana, la cementera, ex fabrica de portland, ex fabrica de portland parana, arte la portland, arte la portland parana"
     />
     
     <title>Jorgelina Parkinson</title>
